<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference>
        android:key="@string/last_sync_value"
        android:defaultValue="@string/last_sync_default"
    </Preference>
    <Preference>
        android:key="@string/first_start_value"
        android:defaultValue="@string/first_start_default"
    </Preference>
    <Preference>
        android:key="@string/levenshtein_value"
        android:defaultValue="@string/levenshtein_default"
    </Preference>
    <Preference>
        android:key="@string/notification_interval_value"
        android:defaultValue="@string/notification_interval_default"
    </Preference>
    <Preference>
        android:key="@string/sheetId_value"
        android:defaultValue="@string/sheetId_default"
    </Preference>
</PreferenceScreen>