<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_images"
        android:icon="@drawable/ic_camera_alt_24dp"
        android:title="@string/menu_delete_images"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_24dp"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom" />
</menu>