<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.DoNotDim"
    tools:context="com.yevsp8.checkmanager.view.NewImageActivity">

    <FrameLayout
        android:id="@+id/helpText_framgentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/captured_photo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_content_description_capture_a_photo" />

        <Button
            android:id="@+id/button_capture_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/button_capture" />

        <Button
            android:id="@+id/button_recognise_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_recognise" />

        <Button
            android:id="@+id/button_demoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="Demo" />


</RelativeLayout>
